fix: import export and add visible sagest

--- a/src/shared/UI/SearchBar/SearchBar.module.css
+++ b/src/shared/UI/SearchBar/SearchBar.module.css
@@ -16,7 +16,8 @@
   background-color: rgb(78, 76, 76);
   border-radius: 10px;
   z-index: 5;
-  position: relative;
+  position: absolute;
+  width: 500px;
 }
 
 .link {
@@ -37,4 +38,8 @@
   color: white;
   width: 30px;
   height: 30px;
+}
+
+.active {
+  display: none;
 }
